frontend/test/should_fail/computations_decl_use_calls_type_mismatch_func_001.grg
using model_init;

func(b:B) : Node
{
	return(b);
}

rule r
{
	n:Node;
	modify {
		eval {
			def n2:Node = func(n);
		}
	}
}

